# poke-c

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/core/: csv.c  csv.h  model.h  normalize.c  normalize.h
src/format/: format.c  format.h
src/util/: split.c  split.h
